[project]
name = "expensetracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "google-genai>=1.52.0",
    "mcp[cli]>=1.22.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
